--- a/Python-Modules/Numpy/Numpy.ipynb
+++ b/Python-Modules/Numpy/Numpy.ipynb
@@ -4472,6 +4472,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further Reading for Data Scientists:\n",
+    "https://towardsdatascience.com/20-of-numpy-functions-that-data-scientists-use-80-of-the-time-d8bd9c7d144b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
